<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nearBy</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="title_activity_transports">TransportsActivity</string>
    <string name="transports">Transportes</string>
    <string name="title_activity_transport_info">TransportInfoActivity</string>
    <string name="transport_info">Informação do Transporte</string>
    <string name="title_activity_restaurants">RestaurantsActivity</string>
    <string name="restaurants">Restauração</string>
    <string name="title_activity_restaurant_info">RestaurantInfoActivity</string>
    <string name="restaurant_info">Informação de Restauração</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Definições</string>
    <string name="filters">Filtros</string>
    <string name="help">Ajuda</string>
    <string name="about">Sobre</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="title_activity_restaurants_filter">RestaurantsFilterActivity</string>
    <string name="transports_filters">Filtros de Transportes</string>
    <string name="restaurants_filters">Filtros de Restauração</string>
    <string name="interest_points_filters">Filtros de Pontos de Interesse</string>
    <string name="alwaysAlert">Avisar Sempre</string>
    <string name="onlyPromotions">Apenas Promoções</string>
    <string name="neverAlert">Nunca Avisar</string>
    <string name="vibration">Vibração</string>
    <string name="sound">Sonoro</string>
    <string name="vibration_and_sound">Vibração e Sonoro</string>
    <string name="title_activity_alert_type">AlertTypeActivity</string>
    <string name="alert_type">Tipo de Alerta</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_interest_points">InterestPointsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="interest_points">Pontos de Interesse</string>
    <string name="title_activity_interest_points_info">InterestPointsInfoActivity</string>
    <string name="interest_point_info">Informação do Ponto de Interesse</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="rating">Classificação</string>
    <string name="rate">Classificar</string>
    <string name="clock1">Clock1</string>
    <string name="arrow">Arrow</string>
    <string name="about_developers">Desenvolvido por:\nFilipe Relvas\nLuís Rosado\nPedro Lopes</string>
    <string name="rate_description">Atribua aqui a classificação\ndo ponto de interesse:\n\n</string>

</resources>