<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FiltersActivity"
    android:background="@android:color/black" >

	<RelativeLayout
	    android:id="@+id/main_screen"
        android:layout_width="@dimen/screen_size"
        android:layout_height="@dimen/screen_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusbar_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/azul_ist">
            
            <TextView
                android:id="@+id/lbl_statusbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:text="@string/filters" />
        </RelativeLayout>
        
        <Button
            android:id="@+id/btn_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/transports"
            android:background="@drawable/btn_separator"/>
        
        <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_filters"
            android:text="@string/restaurants"
            android:background="@drawable/btn_separator"
            android:onClick="openRestaurantsFilter"/>
        
        <Button
            android:id="@+id/btn_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_help"
            android:layout_centerHorizontal="true"
            android:text="@string/interest_points"
			android:background="@android:color/transparent"/>
    </RelativeLayout>
    
    
</RelativeLayout>