<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlertTypeActivity"
    android:background="@android:color/black" >

	<RelativeLayout
        android:layout_width="@dimen/screen_size"
        android:layout_height="@dimen/screen_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusbar_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/azul_ist">
            
            <TextView
                android:id="@+id/lbl_statusbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/homescreen_btn_margin"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:text="@string/alert_type" />
        </RelativeLayout>
        
        	<RadioGroup
		    android:id="@+id/alertRadioGroup"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true" >

		    <RadioButton
		        android:id="@+id/vibration"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/double_margin"
		        android:checked="true"
		        android:text="@string/vibration"
		        android:onClick="onRadioButtonClick"/>
		    
		    <RadioButton
		        android:id="@+id/sound"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/double_margin"
		        android:text="@string/sound"
		        android:onClick="onRadioButtonClick"/>

		    <RadioButton
		        android:id="@+id/vibration_and_sound"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/double_margin"
		        android:text="@string/vibration_and_sound"
		        android:onClick="onRadioButtonClick"/>
		</RadioGroup>  
    </RelativeLayout>

</RelativeLayout>