<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context=".SettingsActivity">
    
    <RelativeLayout
        android:id="@+id/main_screen"
        android:layout_width="@dimen/screen_size"
        android:layout_height="@dimen/screen_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusbar_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/azul_ist">
            
            <TextView
                android:id="@+id/lbl_statusbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:text="@string/settings" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40px"
            android:text="@string/filters"
            android:background="@drawable/btn_separator"
            android:onClick="openFilters"/>
        
        <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_filters"
            android:text="@string/help"
            android:background="@drawable/btn_separator"/>
        
        <Button
            android:id="@+id/btn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_help"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/homescreen_btn_margin"
            android:text="@string/about"
			android:background="@android:color/transparent"
			android:onClick="openAbout"/>

       </RelativeLayout>
</RelativeLayout>