<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RestaurantInfoActivity"
    android:background="@android:color/black">

    <RelativeLayout
        android:layout_width="@dimen/screen_size"
        android:layout_height="@dimen/screen_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusbar_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/azul_ist">
            
            <TextView
                android:id="@+id/lbl_statusbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/homescreen_btn_margin"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:text="@string/restaurant_info"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4mm"
                android:textSize="20sp"/>
            
            <ImageView
                android:id="@+id/navigation_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="2mm"
                android:contentDescription="@string/arrow"
				android:src="@drawable/arrow"/>
            
            <TextView
	            android:id="@+id/tv_distance"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:textSize="14sp"
	            android:layout_below="@id/navigation_arrow"
	            android:layout_marginTop="2mm"
	            android:text="95 m"/>

           <Button
                android:id="@+id/rateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:text="@string/rate"
                android:background="@drawable/btn_background"
                android:onClick="openRate"/>
	        <RatingBar
	            android:id="@+id/ratingBarView"
	            style="?android:attr/ratingBarStyleSmall"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_above="@id/rateBtn"
	            android:layout_marginBottom="0.5mm"
	            android:layout_marginLeft="@dimen/homescreen_btn_margin"
	            android:scaleX="1.1"
	            android:scaleY="1.1" />
	        <TextView
	            android:id="@+id/tv_schedule"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_above="@id/rateBtn"
	            android:layout_marginBottom="0.5mm"
	            android:layout_marginRight="@dimen/homescreen_btn_margin"/>
        </RelativeLayout>
	</RelativeLayout>

</RelativeLayout>
